--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,13 @@ pipeline
         }
         stage('Build images')
         {
-            steps{sh 'docker build -t node-app .'}
+            steps{sh 'docker build -t 123doc123/nodejsapp:v1 .'}
+        }
+        stage('push images')
+        {
+            steps{withDockerRegistry(credentialsId: 'dockerhub', url: 'https://index.docker.io/v1/') {
+             sh 'docker push 123doc123/nodejsapp:v1'
+}}
         }
         stage('deploy on docker container')
         {
